// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aggregatedCargo is empty object 1`] = `
<div
  className="
        flex-100 layout-row layout-wrap offer_result flex-lg-80 offset-lg-20
        wrapper 
      "
>
  <div
    className="flex-100 layout-row layout-align-start-center container"
  >
    <div
      className="flex-10 layout-row layout-align-center-center mot_icon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-55 layout-row layout-align-start-center origin_destination"
    >
      <div
        className="layout-column layout-align-center-start flex-100"
      >
        <p>
          From: 
          <span>
            Gothenburg
          </span>
        </p>
        <p>
          To: 
          <span>
            Shanghai
          </span>
        </p>
      </div>
    </div>
    <div
      className="flex layout-row layout-wrap layout-align-end-center"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center unit_info"
      >
        <div
          className="flex-100 layout-row layout-align-start-center unit_info"
        >
          <p
            className="flex-100 layout-row layout-align-start"
          >
            Total Weight: 
            <UnitsWeight
              scope={Object {}}
              spanClasses="flex layout-row layout-align-end"
              value={0}
            />
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="details"
  >
    <div
      className="details_row"
    >
      <div>
        <i
          className="flex-none fa fa-clock-o"
        />
        Valid Until: {{date}}
      </div>
    </div>
    <div
      className="details_row"
    />
  </div>
  <CollapsingContent
    collapsed={true}
    content=""
    initialExpanded={false}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteCardScheduleList
      destinationHub={
        Object {
          "name": "Shanghai",
        }
      }
      onSelectSchedule={[Function]}
      originHub={
        Object {
          "name": "Gothenburg",
        }
      }
      schedules={
        Array [
          Object {
            "closing_date": "10-8-2018",
            "eta": "10-8-2018",
            "etd": "10-8-2018",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <CollapsingContent
    collapsed={false}
    content=""
    initialExpanded={false}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteChargeBreakdown
      cargo={Array []}
      meta={
        Object {
          "destination_hub": Object {
            "name": "Shanghai",
          },
          "origin_hub": Object {
            "name": "Gothenburg",
          },
          "pricing_range_data": Object {
            "fcl_20": Object {
              "valid_until": "2019-12-31T00:00:00.000Z",
            },
          },
          "validUntil": "2019-12-31T00:00:00.000Z",
        }
      }
      pricingBreakdowns={Array []}
      quote={
        Object {
          "cargo": Object {
            "265": Object {
              "bas": Object {
                "currency": "GBP",
                "name": "Bas",
                "value": 187.5,
              },
              "edited_total": null,
              "name": "Cargoitem",
              "total": Object {
                "currency": "GBP",
                "value": 187.5,
              },
            },
            "edited_total": null,
            "name": "Cargo",
            "total": Object {
              "currency": "GBP",
              "value": 187.5,
            },
          },
          "edited_total": null,
          "export": Object {
            "ams": Object {
              "currency": "CNY",
              "name": "AMS ENS ACI",
              "value": 180,
            },
            "bkn": Object {
              "currency": "CNY",
              "name": "CFS",
              "value": 190,
            },
            "doc": Object {
              "currency": "CNY",
              "name": "Documentation",
              "value": 350,
            },
            "edited_total": null,
            "name": "Export",
            "tel": Object {
              "currency": "CNY",
              "name": "TELEX",
              "value": 150,
            },
            "total": Object {
              "currency": "GBP",
              "value": 111.52,
            },
            "vgm": Object {
              "currency": "CNY",
              "name": "VGM",
              "value": 105,
            },
          },
          "import": Object {
            "edited_total": null,
            "imp": Object {
              "currency": "GBP",
              "name": "Customs Clearance",
              "value": 0,
            },
            "name": "Import",
            "total": Object {
              "currency": "GBP",
              "value": 0,
            },
          },
          "name": "Grand Total",
          "total": Object {
            "currency": "GBP",
            "value": 440.78,
          },
          "trucking_on": Object {
            "edited_total": null,
            "name": "Trucking On",
            "total": Object {
              "currency": "GBP",
              "value": 80,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "GBP",
                "name": "Stackable",
                "value": 80,
              },
              "total": Object {
                "currency": "GBP",
                "value": 80,
              },
            },
          },
          "trucking_pre": Object {
            "edited_total": null,
            "name": "Trucking Pre",
            "total": Object {
              "currency": "GBP",
              "value": 61.76,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "CNY",
                "name": "Stackable",
                "value": 540,
              },
              "total": Object {
                "currency": "CNY",
                "value": 540,
              },
            },
          },
        }
      }
      scope={
        Object {
          "cargo_info_level": "text",
          "carriage_options": Object {
            "on_carriage": Object {
              "export": "mandatory",
              "import": "mandatory",
            },
            "pre_carriage": Object {
              "export": "optional",
              "import": "optional",
            },
          },
          "closed_quotation_tool": true,
          "customs_export_paper": false,
          "detailed_billing": true,
          "has_customs": true,
          "has_insurance": true,
          "hide_grand_total": true,
          "mandatory_form_fields": Object {
            "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
            "total_goods_value": 3370,
          },
          "modes_of_transport": Object {
            "air": Object {
              "AIR_LOAD_TYPE": 0,
            },
            "ocean": Object {
              "OCEAN_LOAD_TYPE": 2,
            },
            "rail": Object {
              "RAIL_LOAD_TYPE": 0,
            },
            "truck": Object {
              "TRUCK_LOAD_TYPE": 0,
            },
          },
          "terms": Array [
            "FOO_TERM",
            "BAR_TERM",
          ],
        }
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      trucking={
        Object {
          "has_on_carriage": false,
          "has_pre_carriage": false,
          "on_carriage": Object {
            "trucking_time_in_seconds": 28,
          },
          "pre_carriage": Object {
            "trucking_time_in_seconds": 55,
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <div
    className="flex-100 layout-wrap layout-align-start-stretch"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch layout-wrap total_row"
    >
      <div
        className="flex-100  layout-row layout-align-end-center"
      >
        <div
          className=" flex-33 layout-row layout-align-end-center"
        >
          <RoundButton
            active={true}
            back={false}
            classNames="ccb_select_quote pointy layout-row layout-align-center-center add_button"
            disabled={false}
            flexContainer="100"
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass=""
            inverse={false}
            size="full"
            text="Select"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center"
        >
          <p
            className="flex-30"
          />
          <p
            className="flex-70 layout-row layout-align-center-end"
          >
             
             
          </p>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className="flex-60 layout-row layout-align-end-center layout-wrap"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`detailed billing working properly 1`] = `
<div
  className="
        flex-100 layout-row layout-wrap offer_result flex-lg-80 offset-lg-20
        wrapper 
      "
>
  <div
    className="flex-100 layout-row layout-align-start-center container"
  >
    <div
      className="flex-10 layout-row layout-align-center-center mot_icon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-55 layout-row layout-align-start-center origin_destination"
    >
      <div
        className="layout-column layout-align-center-start flex-100"
      >
        <p>
          From: 
          <span>
            Gothenburg
          </span>
        </p>
        <p>
          To: 
          <span>
            Shanghai
          </span>
        </p>
      </div>
    </div>
    <div
      className="flex layout-row layout-wrap layout-align-end-center"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center unit_info"
      >
        <div
          className="flex-100 layout-row layout-align-start-center unit_info"
        >
          <p
            className="flex-100 layout-row layout-align-start"
          >
            Total Weight: 
            <UnitsWeight
              scope={Object {}}
              spanClasses="flex layout-row layout-align-end"
              value={220}
            />
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="details"
  >
    <div
      className="details_row"
    >
      <div>
        <i
          className="flex-none fa fa-clock-o"
        />
        Valid Until: {{date}}
      </div>
    </div>
    <div
      className="details_row"
    />
  </div>
  <CollapsingContent
    collapsed={true}
    content=""
    initialExpanded={false}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteCardScheduleList
      destinationHub={
        Object {
          "name": "Shanghai",
        }
      }
      onSelectSchedule={[Function]}
      originHub={
        Object {
          "name": "Gothenburg",
        }
      }
      schedules={
        Array [
          Object {
            "closing_date": "10-8-2018",
            "eta": "10-8-2018",
            "etd": "10-8-2018",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <CollapsingContent
    collapsed={false}
    content=""
    initialExpanded={false}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteChargeBreakdown
      cargo={Array []}
      meta={
        Object {
          "destination_hub": Object {
            "name": "Shanghai",
          },
          "origin_hub": Object {
            "name": "Gothenburg",
          },
          "pricing_range_data": Object {
            "fcl_20": Object {
              "valid_until": "2019-12-31T00:00:00.000Z",
            },
          },
          "validUntil": "2019-12-31T00:00:00.000Z",
        }
      }
      pricingBreakdowns={Array []}
      quote={
        Object {
          "cargo": Object {
            "265": Object {
              "bas": Object {
                "currency": "GBP",
                "name": "Bas",
                "value": 187.5,
              },
              "edited_total": null,
              "name": "Cargoitem",
              "total": Object {
                "currency": "GBP",
                "value": 187.5,
              },
            },
            "edited_total": null,
            "name": "Cargo",
            "total": Object {
              "currency": "GBP",
              "value": 187.5,
            },
          },
          "edited_total": null,
          "export": Object {
            "ams": Object {
              "currency": "CNY",
              "name": "AMS ENS ACI",
              "value": 180,
            },
            "bkn": Object {
              "currency": "CNY",
              "name": "CFS",
              "value": 190,
            },
            "doc": Object {
              "currency": "CNY",
              "name": "Documentation",
              "value": 350,
            },
            "edited_total": null,
            "name": "Export",
            "tel": Object {
              "currency": "CNY",
              "name": "TELEX",
              "value": 150,
            },
            "total": Object {
              "currency": "GBP",
              "value": 111.52,
            },
            "vgm": Object {
              "currency": "CNY",
              "name": "VGM",
              "value": 105,
            },
          },
          "import": Object {
            "edited_total": null,
            "imp": Object {
              "currency": "GBP",
              "name": "Customs Clearance",
              "value": 0,
            },
            "name": "Import",
            "total": Object {
              "currency": "GBP",
              "value": 0,
            },
          },
          "name": "Grand Total",
          "total": Object {
            "currency": "GBP",
            "value": 440.78,
          },
          "trucking_on": Object {
            "edited_total": null,
            "name": "Trucking On",
            "total": Object {
              "currency": "GBP",
              "value": 80,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "GBP",
                "name": "Stackable",
                "value": 80,
              },
              "total": Object {
                "currency": "GBP",
                "value": 80,
              },
            },
          },
          "trucking_pre": Object {
            "edited_total": null,
            "name": "Trucking Pre",
            "total": Object {
              "currency": "GBP",
              "value": 61.76,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "CNY",
                "name": "Stackable",
                "value": 540,
              },
              "total": Object {
                "currency": "CNY",
                "value": 540,
              },
            },
          },
        }
      }
      scope={
        Object {
          "closed_quotation_tool": true,
          "detailed_billing": true,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        }
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      trucking={
        Object {
          "has_on_carriage": false,
          "has_pre_carriage": false,
          "on_carriage": Object {
            "trucking_time_in_seconds": 28,
          },
          "pre_carriage": Object {
            "trucking_time_in_seconds": 55,
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <div
    className="flex-100 layout-wrap layout-align-start-stretch"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch layout-wrap total_row"
    >
      <div
        className="flex-100  layout-row layout-align-end-center"
      >
        <div
          className=" flex-33 layout-row layout-align-end-center"
        >
          <RoundButton
            active={true}
            back={false}
            classNames="ccb_select_quote pointy layout-row layout-align-center-center add_button"
            disabled={false}
            flexContainer="100"
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass=""
            inverse={false}
            size="full"
            text="Select"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center"
        >
          <p
            className="flex-30"
          >
            Total
          </p>
          <p
            className="flex-70 layout-row layout-align-center-end"
          >
             
            440.78 GBP
             
          </p>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className="flex-60 layout-row layout-align-end-center layout-wrap"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`shallow rendering 1`] = `
<div
  className="
        flex-100 layout-row layout-wrap offer_result flex-lg-80 offset-lg-20
        wrapper 
      "
>
  <div
    className="flex-100 layout-row layout-align-start-center container"
  >
    <div
      className="flex-10 layout-row layout-align-center-center mot_icon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-55 layout-row layout-align-start-center origin_destination"
    >
      <div
        className="layout-column layout-align-center-start flex-100"
      >
        <p>
          From: 
          <span>
            Gothenburg
          </span>
        </p>
        <p>
          To: 
          <span>
            Shanghai
          </span>
        </p>
      </div>
    </div>
    <div
      className="flex layout-row layout-wrap layout-align-end-center"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center unit_info"
      >
        <div
          className="flex-100 layout-row layout-align-start-center unit_info"
        >
          <p
            className="flex-100 layout-row layout-align-start"
          >
            Total Weight: 
            <UnitsWeight
              scope={Object {}}
              spanClasses="flex layout-row layout-align-end"
              value={220}
            />
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="details"
  >
    <div
      className="details_row"
    >
      <div>
        <i
          className="flex-none fa fa-clock-o"
        />
        Valid Until: {{date}}
      </div>
    </div>
    <div
      className="details_row"
    />
  </div>
  <CollapsingContent
    collapsed={true}
    content=""
    initialExpanded={false}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteCardScheduleList
      destinationHub={
        Object {
          "name": "Shanghai",
        }
      }
      onSelectSchedule={[Function]}
      originHub={
        Object {
          "name": "Gothenburg",
        }
      }
      schedules={
        Array [
          Object {
            "closing_date": "10-8-2018",
            "eta": "10-8-2018",
            "etd": "10-8-2018",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <CollapsingContent
    collapsed={false}
    content=""
    initialExpanded={false}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteChargeBreakdown
      cargo={Array []}
      meta={
        Object {
          "destination_hub": Object {
            "name": "Shanghai",
          },
          "origin_hub": Object {
            "name": "Gothenburg",
          },
          "pricing_range_data": Object {
            "fcl_20": Object {
              "valid_until": "2019-12-31T00:00:00.000Z",
            },
          },
          "validUntil": "2019-12-31T00:00:00.000Z",
        }
      }
      pricingBreakdowns={Array []}
      quote={
        Object {
          "cargo": Object {
            "265": Object {
              "bas": Object {
                "currency": "GBP",
                "name": "Bas",
                "value": 187.5,
              },
              "edited_total": null,
              "name": "Cargoitem",
              "total": Object {
                "currency": "GBP",
                "value": 187.5,
              },
            },
            "edited_total": null,
            "name": "Cargo",
            "total": Object {
              "currency": "GBP",
              "value": 187.5,
            },
          },
          "edited_total": null,
          "export": Object {
            "ams": Object {
              "currency": "CNY",
              "name": "AMS ENS ACI",
              "value": 180,
            },
            "bkn": Object {
              "currency": "CNY",
              "name": "CFS",
              "value": 190,
            },
            "doc": Object {
              "currency": "CNY",
              "name": "Documentation",
              "value": 350,
            },
            "edited_total": null,
            "name": "Export",
            "tel": Object {
              "currency": "CNY",
              "name": "TELEX",
              "value": 150,
            },
            "total": Object {
              "currency": "GBP",
              "value": 111.52,
            },
            "vgm": Object {
              "currency": "CNY",
              "name": "VGM",
              "value": 105,
            },
          },
          "import": Object {
            "edited_total": null,
            "imp": Object {
              "currency": "GBP",
              "name": "Customs Clearance",
              "value": 0,
            },
            "name": "Import",
            "total": Object {
              "currency": "GBP",
              "value": 0,
            },
          },
          "name": "Grand Total",
          "total": Object {
            "currency": "GBP",
            "value": 440.78,
          },
          "trucking_on": Object {
            "edited_total": null,
            "name": "Trucking On",
            "total": Object {
              "currency": "GBP",
              "value": 80,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "GBP",
                "name": "Stackable",
                "value": 80,
              },
              "total": Object {
                "currency": "GBP",
                "value": 80,
              },
            },
          },
          "trucking_pre": Object {
            "edited_total": null,
            "name": "Trucking Pre",
            "total": Object {
              "currency": "GBP",
              "value": 61.76,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "CNY",
                "name": "Stackable",
                "value": 540,
              },
              "total": Object {
                "currency": "CNY",
                "value": 540,
              },
            },
          },
        }
      }
      scope={
        Object {
          "cargo_info_level": "text",
          "carriage_options": Object {
            "on_carriage": Object {
              "export": "mandatory",
              "import": "mandatory",
            },
            "pre_carriage": Object {
              "export": "optional",
              "import": "optional",
            },
          },
          "closed_quotation_tool": true,
          "customs_export_paper": false,
          "detailed_billing": true,
          "has_customs": true,
          "has_insurance": true,
          "hide_grand_total": true,
          "mandatory_form_fields": Object {
            "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
            "total_goods_value": 3370,
          },
          "modes_of_transport": Object {
            "air": Object {
              "AIR_LOAD_TYPE": 0,
            },
            "ocean": Object {
              "OCEAN_LOAD_TYPE": 2,
            },
            "rail": Object {
              "RAIL_LOAD_TYPE": 0,
            },
            "truck": Object {
              "TRUCK_LOAD_TYPE": 0,
            },
          },
          "terms": Array [
            "FOO_TERM",
            "BAR_TERM",
          ],
        }
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      trucking={
        Object {
          "has_on_carriage": false,
          "has_pre_carriage": false,
          "on_carriage": Object {
            "trucking_time_in_seconds": 28,
          },
          "pre_carriage": Object {
            "trucking_time_in_seconds": 55,
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <div
    className="flex-100 layout-wrap layout-align-start-stretch"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch layout-wrap total_row"
    >
      <div
        className="flex-100  layout-row layout-align-end-center"
      >
        <div
          className=" flex-33 layout-row layout-align-end-center"
        >
          <RoundButton
            active={true}
            back={false}
            classNames="ccb_select_quote pointy layout-row layout-align-center-center add_button"
            disabled={false}
            flexContainer="100"
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass=""
            inverse={false}
            size="full"
            text="Select"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center"
        >
          <p
            className="flex-30"
          />
          <p
            className="flex-70 layout-row layout-align-center-end"
          >
             
             
          </p>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className="flex-60 layout-row layout-align-end-center layout-wrap"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`show schedule options working 1`] = `
<div
  className="
        flex-100 layout-row layout-wrap offer_result flex-lg-80 offset-lg-20
        wrapper 
      "
>
  <div
    className="flex-100 layout-row layout-align-start-center container"
  >
    <div
      className="flex-10 layout-row layout-align-center-center mot_icon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-55 layout-row layout-align-start-center origin_destination"
    >
      <div
        className="layout-column layout-align-center-start flex-100"
      >
        <p>
          From: 
          <span>
            Gothenburg
          </span>
        </p>
        <p>
          To: 
          <span>
            Shanghai
          </span>
        </p>
      </div>
    </div>
    <div
      className="flex layout-row layout-wrap layout-align-end-center"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center unit_info"
      >
        <div
          className="flex-100 layout-row layout-align-start-center unit_info"
        >
          <p
            className="flex-100 layout-row layout-align-start"
          >
            Total Weight: 
            <UnitsWeight
              scope={Object {}}
              spanClasses="flex layout-row layout-align-end"
              value={220}
            />
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="details"
  >
    <div
      className="details_row"
    >
      <div>
        <i
          className="flex-none fa fa-clock-o"
        />
        Valid Until: {{date}}
      </div>
    </div>
    <div
      className="details_row"
    />
  </div>
  <CollapsingContent
    collapsed={false}
    content=""
    initialExpanded={true}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteCardScheduleList
      destinationHub={
        Object {
          "name": "Shanghai",
        }
      }
      onSelectSchedule={[Function]}
      originHub={
        Object {
          "name": "Gothenburg",
        }
      }
      schedules={
        Array [
          Object {
            "closing_date": "10-8-2018",
            "eta": "10-8-2018",
            "etd": "10-8-2018",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <CollapsingContent
    collapsed={true}
    content=""
    initialExpanded={false}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteChargeBreakdown
      cargo={Array []}
      meta={
        Object {
          "destination_hub": Object {
            "name": "Shanghai",
          },
          "origin_hub": Object {
            "name": "Gothenburg",
          },
          "pricing_range_data": Object {
            "fcl_20": Object {
              "valid_until": "2019-12-31T00:00:00.000Z",
            },
          },
          "validUntil": "2019-12-31T00:00:00.000Z",
        }
      }
      pricingBreakdowns={Array []}
      quote={
        Object {
          "cargo": Object {
            "265": Object {
              "bas": Object {
                "currency": "GBP",
                "name": "Bas",
                "value": 187.5,
              },
              "edited_total": null,
              "name": "Cargoitem",
              "total": Object {
                "currency": "GBP",
                "value": 187.5,
              },
            },
            "edited_total": null,
            "name": "Cargo",
            "total": Object {
              "currency": "GBP",
              "value": 187.5,
            },
          },
          "edited_total": null,
          "export": Object {
            "ams": Object {
              "currency": "CNY",
              "name": "AMS ENS ACI",
              "value": 180,
            },
            "bkn": Object {
              "currency": "CNY",
              "name": "CFS",
              "value": 190,
            },
            "doc": Object {
              "currency": "CNY",
              "name": "Documentation",
              "value": 350,
            },
            "edited_total": null,
            "name": "Export",
            "tel": Object {
              "currency": "CNY",
              "name": "TELEX",
              "value": 150,
            },
            "total": Object {
              "currency": "GBP",
              "value": 111.52,
            },
            "vgm": Object {
              "currency": "CNY",
              "name": "VGM",
              "value": 105,
            },
          },
          "import": Object {
            "edited_total": null,
            "imp": Object {
              "currency": "GBP",
              "name": "Customs Clearance",
              "value": 0,
            },
            "name": "Import",
            "total": Object {
              "currency": "GBP",
              "value": 0,
            },
          },
          "name": "Grand Total",
          "total": Object {
            "currency": "GBP",
            "value": 440.78,
          },
          "trucking_on": Object {
            "edited_total": null,
            "name": "Trucking On",
            "total": Object {
              "currency": "GBP",
              "value": 80,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "GBP",
                "name": "Stackable",
                "value": 80,
              },
              "total": Object {
                "currency": "GBP",
                "value": 80,
              },
            },
          },
          "trucking_pre": Object {
            "edited_total": null,
            "name": "Trucking Pre",
            "total": Object {
              "currency": "GBP",
              "value": 61.76,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "CNY",
                "name": "Stackable",
                "value": 540,
              },
              "total": Object {
                "currency": "CNY",
                "value": 540,
              },
            },
          },
        }
      }
      scope={
        Object {
          "closed_quotation_tool": true,
          "detailed_billing": true,
          "modes_of_transport": Object {
            "air": Object {},
            "ocean": Object {
              "OCEAN_LOAD_TYPE": true,
            },
            "rail": Object {},
            "truck": Object {},
          },
        }
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      trucking={
        Object {
          "has_on_carriage": false,
          "has_pre_carriage": false,
          "on_carriage": Object {
            "trucking_time_in_seconds": 28,
          },
          "pre_carriage": Object {
            "trucking_time_in_seconds": 55,
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <div
    className="flex-100 layout-wrap layout-align-start-stretch"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch layout-wrap total_row"
    >
      <div
        className="flex-100  layout-row layout-align-end-center"
      >
        <div
          className=" flex-33 layout-row layout-align-end-center"
        >
          <RoundButton
            active={true}
            back={false}
            classNames="ccb_select_quote pointy layout-row layout-align-center-center add_button"
            disabled={false}
            flexContainer="100"
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass=""
            inverse={false}
            size="full"
            text="Select"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center"
        >
          <p
            className="flex-30"
          >
            Total
          </p>
          <p
            className="flex-70 layout-row layout-align-center-end"
          >
             
            440.78 GBP
             
          </p>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className="flex-60 layout-row layout-align-end-center layout-wrap"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`single result rendering removes add button 1`] = `
<div
  className="
        flex-100 layout-row layout-wrap offer_result flex-lg-80 offset-lg-20
        wrapper 
      "
>
  <div
    className="flex-100 layout-row layout-align-start-center container"
  >
    <div
      className="flex-10 layout-row layout-align-center-center mot_icon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-55 layout-row layout-align-start-center origin_destination"
    >
      <div
        className="layout-column layout-align-center-start flex-100"
      >
        <p>
          From: 
          <span>
            Gothenburg
          </span>
        </p>
        <p>
          To: 
          <span>
            Shanghai
          </span>
        </p>
      </div>
    </div>
    <div
      className="flex layout-row layout-wrap layout-align-end-center"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center unit_info"
      >
        <div
          className="flex-100 layout-row layout-align-start-center unit_info"
        >
          <p
            className="flex-100 layout-row layout-align-start"
          >
            Total Weight: 
            <UnitsWeight
              scope={Object {}}
              spanClasses="flex layout-row layout-align-end"
              value={220}
            />
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="details"
  >
    <div
      className="details_row"
    >
      <div>
        <i
          className="flex-none fa fa-clock-o"
        />
        Valid Until: {{date}}
      </div>
    </div>
    <div
      className="details_row"
    />
  </div>
  <CollapsingContent
    collapsed={true}
    content=""
    initialExpanded={false}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteCardScheduleList
      destinationHub={
        Object {
          "name": "Shanghai",
        }
      }
      onSelectSchedule={[Function]}
      originHub={
        Object {
          "name": "Gothenburg",
        }
      }
      schedules={
        Array [
          Object {
            "closing_date": "10-8-2018",
            "eta": "10-8-2018",
            "etd": "10-8-2018",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <CollapsingContent
    collapsed={false}
    content=""
    initialExpanded={false}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteChargeBreakdown
      cargo={Array []}
      meta={
        Object {
          "destination_hub": Object {
            "name": "Shanghai",
          },
          "origin_hub": Object {
            "name": "Gothenburg",
          },
          "pricing_range_data": Object {
            "fcl_20": Object {
              "valid_until": "2019-12-31T00:00:00.000Z",
            },
          },
          "validUntil": "2019-12-31T00:00:00.000Z",
        }
      }
      pricingBreakdowns={Array []}
      quote={
        Object {
          "cargo": Object {
            "265": Object {
              "bas": Object {
                "currency": "GBP",
                "name": "Bas",
                "value": 187.5,
              },
              "edited_total": null,
              "name": "Cargoitem",
              "total": Object {
                "currency": "GBP",
                "value": 187.5,
              },
            },
            "edited_total": null,
            "name": "Cargo",
            "total": Object {
              "currency": "GBP",
              "value": 187.5,
            },
          },
          "edited_total": null,
          "export": Object {
            "ams": Object {
              "currency": "CNY",
              "name": "AMS ENS ACI",
              "value": 180,
            },
            "bkn": Object {
              "currency": "CNY",
              "name": "CFS",
              "value": 190,
            },
            "doc": Object {
              "currency": "CNY",
              "name": "Documentation",
              "value": 350,
            },
            "edited_total": null,
            "name": "Export",
            "tel": Object {
              "currency": "CNY",
              "name": "TELEX",
              "value": 150,
            },
            "total": Object {
              "currency": "GBP",
              "value": 111.52,
            },
            "vgm": Object {
              "currency": "CNY",
              "name": "VGM",
              "value": 105,
            },
          },
          "import": Object {
            "edited_total": null,
            "imp": Object {
              "currency": "GBP",
              "name": "Customs Clearance",
              "value": 0,
            },
            "name": "Import",
            "total": Object {
              "currency": "GBP",
              "value": 0,
            },
          },
          "name": "Grand Total",
          "total": Object {
            "currency": "GBP",
            "value": 440.78,
          },
          "trucking_on": Object {
            "edited_total": null,
            "name": "Trucking On",
            "total": Object {
              "currency": "GBP",
              "value": 80,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "GBP",
                "name": "Stackable",
                "value": 80,
              },
              "total": Object {
                "currency": "GBP",
                "value": 80,
              },
            },
          },
          "trucking_pre": Object {
            "edited_total": null,
            "name": "Trucking Pre",
            "total": Object {
              "currency": "GBP",
              "value": 61.76,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "CNY",
                "name": "Stackable",
                "value": 540,
              },
              "total": Object {
                "currency": "CNY",
                "value": 540,
              },
            },
          },
        }
      }
      scope={
        Object {
          "cargo_info_level": "text",
          "carriage_options": Object {
            "on_carriage": Object {
              "export": "mandatory",
              "import": "mandatory",
            },
            "pre_carriage": Object {
              "export": "optional",
              "import": "optional",
            },
          },
          "closed_quotation_tool": true,
          "customs_export_paper": false,
          "detailed_billing": true,
          "has_customs": true,
          "has_insurance": true,
          "hide_grand_total": true,
          "mandatory_form_fields": Object {
            "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
            "total_goods_value": 3370,
          },
          "modes_of_transport": Object {
            "air": Object {
              "AIR_LOAD_TYPE": 0,
            },
            "ocean": Object {
              "OCEAN_LOAD_TYPE": 2,
            },
            "rail": Object {
              "RAIL_LOAD_TYPE": 0,
            },
            "truck": Object {
              "TRUCK_LOAD_TYPE": 0,
            },
          },
          "terms": Array [
            "FOO_TERM",
            "BAR_TERM",
          ],
        }
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      trucking={
        Object {
          "has_on_carriage": false,
          "has_pre_carriage": false,
          "on_carriage": Object {
            "trucking_time_in_seconds": 28,
          },
          "pre_carriage": Object {
            "trucking_time_in_seconds": 55,
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <div
    className="flex-100 layout-wrap layout-align-start-stretch"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch layout-wrap total_row"
    >
      <div
        className="flex-100  layout-row layout-align-end-center"
      >
        <div
          className="flex-100 layout-row layout-align-space-around-center"
        >
          <p
            className="flex-30"
          />
          <p
            className="flex-70 layout-row layout-align-center-end"
          >
             
             
          </p>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className="flex-60 layout-row layout-align-end-center layout-wrap"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`tenant.scope is empty object 1`] = `
<div
  className="
        flex-100 layout-row layout-wrap offer_result 
        wrapper 
      "
>
  <div
    className="flex-100 layout-row layout-align-start-center container"
  >
    <div
      className="flex-10 layout-row layout-align-center-center mot_icon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-55 layout-row layout-align-start-center origin_destination"
    >
      <div
        className="layout-column layout-align-center-start flex-100"
      >
        <p>
          From: 
          <span>
            Gothenburg
          </span>
        </p>
        <p>
          To: 
          <span>
            Shanghai
          </span>
        </p>
      </div>
    </div>
    <div
      className="flex layout-row layout-wrap layout-align-end-center"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center unit_info"
      >
        <div
          className="flex-100 layout-row layout-align-start-center unit_info"
        >
          <p
            className="flex-100 layout-row layout-align-start"
          >
            Total Weight: 
            <UnitsWeight
              scope={Object {}}
              spanClasses="flex layout-row layout-align-end"
              value={220}
            />
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="details"
  >
    <div
      className="details_row"
    >
      <div>
        <i
          className="flex-none fa fa-clock-o"
        />
        Valid Until: {{date}}
      </div>
    </div>
    <div
      className="details_row"
    />
  </div>
  <CollapsingContent
    collapsed={false}
    content=""
    initialExpanded={true}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteCardScheduleList
      destinationHub={
        Object {
          "name": "Shanghai",
        }
      }
      onSelectSchedule={[Function]}
      originHub={
        Object {
          "name": "Gothenburg",
        }
      }
      schedules={
        Array [
          Object {
            "closing_date": "10-8-2018",
            "eta": "10-8-2018",
            "etd": "10-8-2018",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <CollapsingContent
    collapsed={true}
    content=""
    initialExpanded={false}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteChargeBreakdown
      cargo={Array []}
      meta={
        Object {
          "destination_hub": Object {
            "name": "Shanghai",
          },
          "origin_hub": Object {
            "name": "Gothenburg",
          },
          "pricing_range_data": Object {
            "fcl_20": Object {
              "valid_until": "2019-12-31T00:00:00.000Z",
            },
          },
          "validUntil": "2019-12-31T00:00:00.000Z",
        }
      }
      pricingBreakdowns={Array []}
      quote={
        Object {
          "cargo": Object {
            "265": Object {
              "bas": Object {
                "currency": "GBP",
                "name": "Bas",
                "value": 187.5,
              },
              "edited_total": null,
              "name": "Cargoitem",
              "total": Object {
                "currency": "GBP",
                "value": 187.5,
              },
            },
            "edited_total": null,
            "name": "Cargo",
            "total": Object {
              "currency": "GBP",
              "value": 187.5,
            },
          },
          "edited_total": null,
          "export": Object {
            "ams": Object {
              "currency": "CNY",
              "name": "AMS ENS ACI",
              "value": 180,
            },
            "bkn": Object {
              "currency": "CNY",
              "name": "CFS",
              "value": 190,
            },
            "doc": Object {
              "currency": "CNY",
              "name": "Documentation",
              "value": 350,
            },
            "edited_total": null,
            "name": "Export",
            "tel": Object {
              "currency": "CNY",
              "name": "TELEX",
              "value": 150,
            },
            "total": Object {
              "currency": "GBP",
              "value": 111.52,
            },
            "vgm": Object {
              "currency": "CNY",
              "name": "VGM",
              "value": 105,
            },
          },
          "import": Object {
            "edited_total": null,
            "imp": Object {
              "currency": "GBP",
              "name": "Customs Clearance",
              "value": 0,
            },
            "name": "Import",
            "total": Object {
              "currency": "GBP",
              "value": 0,
            },
          },
          "name": "Grand Total",
          "total": Object {
            "currency": "GBP",
            "value": 440.78,
          },
          "trucking_on": Object {
            "edited_total": null,
            "name": "Trucking On",
            "total": Object {
              "currency": "GBP",
              "value": 80,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "GBP",
                "name": "Stackable",
                "value": 80,
              },
              "total": Object {
                "currency": "GBP",
                "value": 80,
              },
            },
          },
          "trucking_pre": Object {
            "edited_total": null,
            "name": "Trucking Pre",
            "total": Object {
              "currency": "GBP",
              "value": 61.76,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "CNY",
                "name": "Stackable",
                "value": 540,
              },
              "total": Object {
                "currency": "CNY",
                "value": 540,
              },
            },
          },
        }
      }
      scope={Object {}}
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      trucking={
        Object {
          "has_on_carriage": false,
          "has_pre_carriage": false,
          "on_carriage": Object {
            "trucking_time_in_seconds": 28,
          },
          "pre_carriage": Object {
            "trucking_time_in_seconds": 55,
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <div
    className="flex-100 layout-wrap layout-align-start-stretch"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch layout-wrap total_row"
    >
      <div
        className="flex-30 layout-row layout-align-start-center"
      />
      <div
        className="flex  layout-row layout-align-end-center"
      >
        <div
          className="flex-100 layout-row layout-align-space-around-center"
        >
          <p
            className="flex-30"
          >
            Total
          </p>
          <p
            className="flex-70 layout-row layout-align-center-end"
          >
             
            440.78 GBP
             
          </p>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className="flex-60 layout-row layout-align-end-center layout-wrap"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`validUntil is falsy 1`] = `
<div
  className="
        flex-100 layout-row layout-wrap offer_result flex-lg-80 offset-lg-20
        wrapper 
      "
>
  <div
    className="flex-100 layout-row layout-align-start-center container"
  >
    <div
      className="flex-10 layout-row layout-align-center-center mot_icon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-55 layout-row layout-align-start-center origin_destination"
    >
      <div
        className="layout-column layout-align-center-start flex-100"
      >
        <p>
          From: 
          <span>
            Gothenburg
          </span>
        </p>
        <p>
          To: 
          <span>
            Shanghai
          </span>
        </p>
      </div>
    </div>
    <div
      className="flex layout-row layout-wrap layout-align-end-center"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center unit_info"
      >
        <div
          className="flex-100 layout-row layout-align-start-center unit_info"
        >
          <p
            className="flex-100 layout-row layout-align-start"
          >
            Total Weight: 
            <UnitsWeight
              scope={Object {}}
              spanClasses="flex layout-row layout-align-end"
              value={220}
            />
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="details"
  >
    <div
      className="details_row"
    >
      <div>
        <i
          className="flex-none fa fa-clock-o"
        />
        Valid Until: {{date}}
      </div>
    </div>
    <div
      className="details_row"
    />
  </div>
  <CollapsingContent
    collapsed={true}
    content=""
    initialExpanded={false}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteCardScheduleList
      destinationHub={
        Object {
          "name": "Shanghai",
        }
      }
      onSelectSchedule={[Function]}
      originHub={
        Object {
          "name": "Gothenburg",
        }
      }
      schedules={
        Array [
          Object {
            "closing_date": "10-8-2018",
            "eta": "10-8-2018",
            "etd": "10-8-2018",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <CollapsingContent
    collapsed={false}
    content=""
    initialExpanded={false}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteChargeBreakdown
      cargo={Array []}
      meta={
        Object {
          "destination_hub": Object {
            "name": "Shanghai",
          },
          "origin_hub": Object {
            "name": "Gothenburg",
          },
          "pricing_range_data": Object {
            "fcl_20": Object {
              "valid_until": "2019-12-31T00:00:00.000Z",
            },
          },
          "validUntil": "2019-12-31T00:00:00.000Z",
        }
      }
      pricingBreakdowns={Array []}
      quote={
        Object {
          "cargo": Object {
            "265": Object {
              "bas": Object {
                "currency": "GBP",
                "name": "Bas",
                "value": 187.5,
              },
              "edited_total": null,
              "name": "Cargoitem",
              "total": Object {
                "currency": "GBP",
                "value": 187.5,
              },
            },
            "edited_total": null,
            "name": "Cargo",
            "total": Object {
              "currency": "GBP",
              "value": 187.5,
            },
          },
          "edited_total": null,
          "export": Object {
            "ams": Object {
              "currency": "CNY",
              "name": "AMS ENS ACI",
              "value": 180,
            },
            "bkn": Object {
              "currency": "CNY",
              "name": "CFS",
              "value": 190,
            },
            "doc": Object {
              "currency": "CNY",
              "name": "Documentation",
              "value": 350,
            },
            "edited_total": null,
            "name": "Export",
            "tel": Object {
              "currency": "CNY",
              "name": "TELEX",
              "value": 150,
            },
            "total": Object {
              "currency": "GBP",
              "value": 111.52,
            },
            "vgm": Object {
              "currency": "CNY",
              "name": "VGM",
              "value": 105,
            },
          },
          "import": Object {
            "edited_total": null,
            "imp": Object {
              "currency": "GBP",
              "name": "Customs Clearance",
              "value": 0,
            },
            "name": "Import",
            "total": Object {
              "currency": "GBP",
              "value": 0,
            },
          },
          "name": "Grand Total",
          "total": Object {
            "currency": "GBP",
            "value": 440.78,
          },
          "trucking_on": Object {
            "edited_total": null,
            "name": "Trucking On",
            "total": Object {
              "currency": "GBP",
              "value": 80,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "GBP",
                "name": "Stackable",
                "value": 80,
              },
              "total": Object {
                "currency": "GBP",
                "value": 80,
              },
            },
          },
          "trucking_pre": Object {
            "edited_total": null,
            "name": "Trucking Pre",
            "total": Object {
              "currency": "GBP",
              "value": 61.76,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "CNY",
                "name": "Stackable",
                "value": 540,
              },
              "total": Object {
                "currency": "CNY",
                "value": 540,
              },
            },
          },
        }
      }
      scope={
        Object {
          "cargo_info_level": "text",
          "carriage_options": Object {
            "on_carriage": Object {
              "export": "mandatory",
              "import": "mandatory",
            },
            "pre_carriage": Object {
              "export": "optional",
              "import": "optional",
            },
          },
          "closed_quotation_tool": true,
          "customs_export_paper": false,
          "detailed_billing": true,
          "has_customs": true,
          "has_insurance": true,
          "hide_grand_total": true,
          "mandatory_form_fields": Object {
            "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
            "total_goods_value": 3370,
          },
          "modes_of_transport": Object {
            "air": Object {
              "AIR_LOAD_TYPE": 0,
            },
            "ocean": Object {
              "OCEAN_LOAD_TYPE": 2,
            },
            "rail": Object {
              "RAIL_LOAD_TYPE": 0,
            },
            "truck": Object {
              "TRUCK_LOAD_TYPE": 0,
            },
          },
          "terms": Array [
            "FOO_TERM",
            "BAR_TERM",
          ],
        }
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      trucking={
        Object {
          "has_on_carriage": false,
          "has_pre_carriage": false,
          "on_carriage": Object {
            "trucking_time_in_seconds": 28,
          },
          "pre_carriage": Object {
            "trucking_time_in_seconds": 55,
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <div
    className="flex-100 layout-wrap layout-align-start-stretch"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch layout-wrap total_row"
    >
      <div
        className="flex-100  layout-row layout-align-end-center"
      >
        <div
          className=" flex-33 layout-row layout-align-end-center"
        >
          <RoundButton
            active={true}
            back={false}
            classNames="ccb_select_quote pointy layout-row layout-align-center-center add_button"
            disabled={false}
            flexContainer="100"
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass=""
            inverse={false}
            size="full"
            text="Select"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center"
        >
          <p
            className="flex-30"
          />
          <p
            className="flex-70 layout-row layout-align-center-end"
          >
             
             
          </p>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className="flex-60 layout-row layout-align-end-center layout-wrap"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`validUntil is truthy 1`] = `
<div
  className="
        flex-100 layout-row layout-wrap offer_result flex-lg-80 offset-lg-20
        wrapper 
      "
>
  <div
    className="flex-100 layout-row layout-align-start-center container"
  >
    <div
      className="flex-10 layout-row layout-align-center-center mot_icon"
    >
      <i
        className="fa fa-anchor clip "
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </div>
    <div
      className="flex-55 layout-row layout-align-start-center origin_destination"
    >
      <div
        className="layout-column layout-align-center-start flex-100"
      >
        <p>
          From: 
          <span>
            Gothenburg
          </span>
        </p>
        <p>
          To: 
          <span>
            Shanghai
          </span>
        </p>
      </div>
    </div>
    <div
      className="flex layout-row layout-wrap layout-align-end-center"
    >
      <div
        className="flex-100 layout-row layout-wrap layout-align-start-center unit_info"
      >
        <div
          className="flex-100 layout-row layout-align-start-center unit_info"
        >
          <p
            className="flex-100 layout-row layout-align-start"
          >
            Total Weight: 
            <UnitsWeight
              scope={Object {}}
              spanClasses="flex layout-row layout-align-end"
              value={220}
            />
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="details"
  >
    <div
      className="details_row"
    >
      <div>
        <i
          className="flex-none fa fa-clock-o"
        />
        Valid Until: {{date}}
      </div>
    </div>
    <div
      className="details_row"
    />
  </div>
  <CollapsingContent
    collapsed={true}
    content=""
    initialExpanded={false}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteCardScheduleList
      destinationHub={
        Object {
          "name": "Shanghai",
        }
      }
      onSelectSchedule={[Function]}
      originHub={
        Object {
          "name": "Gothenburg",
        }
      }
      schedules={
        Array [
          Object {
            "closing_date": "10-8-2018",
            "eta": "10-8-2018",
            "etd": "10-8-2018",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <CollapsingContent
    collapsed={false}
    content=""
    initialExpanded={false}
    minHeight=""
    overflow={false}
    wrapperContentClasses=""
  >
    <QuoteChargeBreakdown
      cargo={Array []}
      meta={
        Object {
          "destination_hub": Object {
            "name": "Shanghai",
          },
          "origin_hub": Object {
            "name": "Gothenburg",
          },
          "pricing_range_data": Object {
            "fcl_20": Object {
              "valid_until": "2019-12-31T00:00:00.000Z",
            },
          },
          "validUntil": "2019-12-31T00:00:00.000Z",
        }
      }
      pricingBreakdowns={Array []}
      quote={
        Object {
          "cargo": Object {
            "265": Object {
              "bas": Object {
                "currency": "GBP",
                "name": "Bas",
                "value": 187.5,
              },
              "edited_total": null,
              "name": "Cargoitem",
              "total": Object {
                "currency": "GBP",
                "value": 187.5,
              },
            },
            "edited_total": null,
            "name": "Cargo",
            "total": Object {
              "currency": "GBP",
              "value": 187.5,
            },
          },
          "edited_total": null,
          "export": Object {
            "ams": Object {
              "currency": "CNY",
              "name": "AMS ENS ACI",
              "value": 180,
            },
            "bkn": Object {
              "currency": "CNY",
              "name": "CFS",
              "value": 190,
            },
            "doc": Object {
              "currency": "CNY",
              "name": "Documentation",
              "value": 350,
            },
            "edited_total": null,
            "name": "Export",
            "tel": Object {
              "currency": "CNY",
              "name": "TELEX",
              "value": 150,
            },
            "total": Object {
              "currency": "GBP",
              "value": 111.52,
            },
            "vgm": Object {
              "currency": "CNY",
              "name": "VGM",
              "value": 105,
            },
          },
          "import": Object {
            "edited_total": null,
            "imp": Object {
              "currency": "GBP",
              "name": "Customs Clearance",
              "value": 0,
            },
            "name": "Import",
            "total": Object {
              "currency": "GBP",
              "value": 0,
            },
          },
          "name": "Grand Total",
          "total": Object {
            "currency": "GBP",
            "value": 440.78,
          },
          "trucking_on": Object {
            "edited_total": null,
            "name": "Trucking On",
            "total": Object {
              "currency": "GBP",
              "value": 80,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "GBP",
                "name": "Stackable",
                "value": 80,
              },
              "total": Object {
                "currency": "GBP",
                "value": 80,
              },
            },
          },
          "trucking_pre": Object {
            "edited_total": null,
            "name": "Trucking Pre",
            "total": Object {
              "currency": "GBP",
              "value": 61.76,
            },
            "trucking_lcl": Object {
              "edited_total": null,
              "name": "Trucking Lcl",
              "stackable": Object {
                "currency": "CNY",
                "name": "Stackable",
                "value": 540,
              },
              "total": Object {
                "currency": "CNY",
                "value": 540,
              },
            },
          },
        }
      }
      scope={
        Object {
          "cargo_info_level": "text",
          "carriage_options": Object {
            "on_carriage": Object {
              "export": "mandatory",
              "import": "mandatory",
            },
            "pre_carriage": Object {
              "export": "optional",
              "import": "optional",
            },
          },
          "closed_quotation_tool": true,
          "customs_export_paper": false,
          "detailed_billing": true,
          "has_customs": true,
          "has_insurance": true,
          "hide_grand_total": true,
          "mandatory_form_fields": Object {
            "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
            "total_goods_value": 3370,
          },
          "modes_of_transport": Object {
            "air": Object {
              "AIR_LOAD_TYPE": 0,
            },
            "ocean": Object {
              "OCEAN_LOAD_TYPE": 2,
            },
            "rail": Object {
              "RAIL_LOAD_TYPE": 0,
            },
            "truck": Object {
              "TRUCK_LOAD_TYPE": 0,
            },
          },
          "terms": Array [
            "FOO_TERM",
            "BAR_TERM",
          ],
        }
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      trucking={
        Object {
          "has_on_carriage": false,
          "has_pre_carriage": false,
          "on_carriage": Object {
            "trucking_time_in_seconds": 28,
          },
          "pre_carriage": Object {
            "trucking_time_in_seconds": 55,
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </CollapsingContent>
  <div
    className="flex-100 layout-wrap layout-align-start-stretch"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-stretch layout-wrap total_row"
    >
      <div
        className="flex-100  layout-row layout-align-end-center"
      >
        <div
          className=" flex-33 layout-row layout-align-end-center"
        >
          <RoundButton
            active={true}
            back={false}
            classNames="ccb_select_quote pointy layout-row layout-align-center-center add_button"
            disabled={false}
            flexContainer="100"
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass=""
            inverse={false}
            size="full"
            text="Select"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-100 layout-row layout-align-space-around-center"
        >
          <p
            className="flex-30"
          />
          <p
            className="flex-70 layout-row layout-align-center-end"
          >
             
             
          </p>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className="flex-60 layout-row layout-align-end-center layout-wrap"
        />
      </div>
    </div>
  </div>
</div>
`;
